# src/main/kotlin/com/example/models/ServerApiDto.kt
@@ -4,6 +4,17 @@ enum class VoiceFormat {
     OGG,
 }
 
+/**
+ * All set items must be lowercase
+ */
+enum class CommandType(
+    val types: HashSet<String>,
+) {
+    DICE(hashSetOf("кинь", "ким")), // roll a dice
+    CHARACTER(hashSetOf("дай")), // generate character's description
+    UNKNOWN(hashSetOf("-")), // unrecognized / unsupported command
+}
+
 data class TranscriptVoiceRequest(
     val format: VoiceFormat,
     val fileBase64: String,
@@ -12,4 +23,16 @@ data class TranscriptVoiceRequest(
 data class TranscriptVoiceResponse(
     val isSuccessful: Boolean,
     val transcription: String? = null,
+)
+
+data class CommandRequest(
+    val format: VoiceFormat,
+    val fileBase64: String,
+)
+
+data class CommandResponse(
+    val wasRecognized: Boolean = false,
+    val transcription: String? = null,
+    var commandType: CommandType? = null,
+    var commandResult: Any? = null,
 )
